# portallib

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CLI.md  CODE_OF_CONDUCT.md  COMPUTE.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  REPRODUCING.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: gemma4_refit.md
examples/: evaluate_example.py  portal_tasks_dataset_card.md  prepare_dataset.py  refit_example.py  train_example.py
examples/configs/: evaluate.toml  refit.toml  refit_gemma4_e2b.toml  refit_gemma4_e2b_1000.toml  refit_gemma4_e2b_smoke.toml  train.toml
examples/configs/refits/: gemma-3-4b.toml  gemma-4-e2b.toml  mistral-7b.toml  qwen3-8b.toml
examples/launchers/: modal_launcher.py
examples/utils/: __init__.py  loading.py
scripts/: portal_tasks_dataset_card.md  prepare_dataset.py
src/portallib/: __init__.py  _architecture.py  _naming.py  _paths.py  _topology.py  cli.py  config.py  data.py  decoder.py  evaluation.py  model.py  recipes.py  runtime.py  training.py  workflows.py
src/portallib/cli/: __init__.py  __main__.py  recipes.py  workflows.py
tests/: test_cli.py  test_examples.py  test_portallib.py  test_prepare_dataset.py
