[project]
name = "portallib"
version = "0.1.0"
description = "Generate portable task-specific LoRA adapters across language models"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Benjamin Geist", email = "benjamin.geist@ramp.com" },
]
keywords = ["llm", "lora", "peft", "adapters", "machine-learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "huggingface-hub>=0.30,<2",
  "peft>=0.15,<1",
  "safetensors>=0.4,<1",
  "torch>=2.2",
]

[project.urls]
Homepage = "https://github.com/ramp-public/portallib"
Repository = "https://github.com/ramp-public/portallib"
Documentation = "https://github.com/ramp-public/portallib#readme"
Issues = "https://github.com/ramp-public/portallib/issues"
Announcement = "https://x.com/RampLabs/status/2072381992285647280"

[project.optional-dependencies]
training = [
  "datasets>=3,<5",
  "transformers>=4.52,<6",
]

[dependency-groups]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<10",
  "ruff>=0.11,<1",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/CITATION.cff",
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
  "/RELEASING.md",
  "/examples",
  "/pyproject.toml",
  "/src",
  "/tests",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# Keep the alpha release focused on correctness-critical lint rules.
select = ["E9", "F63", "F7", "F82"]
